<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/settings_frag_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/settings_frag_tag"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/settings_frag_tag">

        <LinearLayout
            android:id="@+id/ll_settings_frag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="bottom"
                android:paddingHorizontal="20dp"
                android:paddingBottom="10dp"
                android:text="@string/settings_frag_languageSettings"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/language_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/languageSwitcher"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="20dp"
                    android:text="@string/settings_frag_language"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/language_text_now"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:paddingHorizontal="20dp"
                    android:text="egnlish"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

            </androidx.constraintlayout.widget.ConstraintLayout>

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="50dp"-->
<!--                android:gravity="bottom"-->
<!--                android:paddingHorizontal="20dp"-->
<!--                android:paddingBottom="10dp"-->
<!--                android:text="Other settings"-->
<!--                android:textSize="18sp"-->
<!--                android:textStyle="bold" />-->

<!--            <com.google.android.material.divider.MaterialDivider-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content" />-->


<!--            <Switch-->
<!--                android:id="@+id/switch1"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="60dp"-->
<!--                android:paddingHorizontal="20dp"-->
<!--                android:text="This switcher do N.O.T.H.I.N.G"-->
<!--                tools:ignore="UseSwitchCompatOrMaterialXml" />-->

<!--            <com.google.android.material.divider.MaterialDivider-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content" />-->

<!--            <Switch-->
<!--                android:id="@+id/switch2"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="60dp"-->
<!--                android:paddingHorizontal="20dp"-->
<!--                android:text="And this..."-->
<!--                tools:ignore="UseSwitchCompatOrMaterialXml" />-->

<!--            <com.google.android.material.divider.MaterialDivider-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content" />-->

<!--            <Switch-->
<!--                android:id="@+id/switch3"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="60dp"-->
<!--                android:paddingHorizontal="20dp"-->
<!--                android:text="This too bro"-->
<!--                tools:ignore="UseSwitchCompatOrMaterialXml" />-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="bottom"
                android:paddingHorizontal="20dp"
                android:paddingBottom="10dp"
                android:text="@string/settings_frag_placeList"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/place_list_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="20dp"
                android:text="@string/settings_frag_showPlaces"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>